tests/negative/neg_imported_object_assignment.safe
-- Test: neg_imported_object_assignment
-- Description: Imported package-qualified objects remain read-only in PR08.3.
-- Expected: REJECT unsupported_source_construct

with provider_object;

package imported_object_assignment_test

   task writer

      loop
         provider_object.seed = 4;



